--- a/src/app/akademik/informasi-kelas-kosong/informasi-kelas-kosong.component.html
+++ b/src/app/akademik/informasi-kelas-kosong/informasi-kelas-kosong.component.html
@@ -1,5 +1,3 @@
-<pre>
-1. 	Q	:	Dimanakah saya bisa melihat informasi kelas yang kosong?
-	A	:	Di SiAdin Mahasiswa, papan pengumuman, Tata Usaha (TU), TV SignAge dan didepan pintu ruangan kelas yang
-			semestinya berlangsung perkuliahan.
-</pre>
+<ol>
+	<li>Q : Dimanakah saya bisa melihat informasi kelas yang kosong?</li>A : Di SiAdin Mahasiswa, papan pengumuman, Tata Usaha (TU), TV SignAge dan didepan pintu ruangan kelas yang semestinya berlangsung perkuliahan.
+</ol>
