--- a/src/app/akademik/ktm/ktm.component.html
+++ b/src/app/akademik/ktm/ktm.component.html
@@ -1,22 +1,3 @@
-<pre>
-1. 	Q	:	Syarat-syarat apa saja yang diperlukan untuk membuat Kartu Tanda Mahasiswa (KTM) UDINUS?
-	A	:	Sudah mempunyai rekening di Bank Jateng, membawa pas foto 3x4.
-
-2. 	Q	:	Jika saya kehilangan KTM, apa yang harus saya lakukan?
-	A	:	membuat surat kehilangan dari kepolisian, lalu ke bank yang mengeluarkan KTM, lalu membuat KTM baru dengan nomor
-			rekeing yang sama.
-
-3. 	Q	:	Apabila kita lupa tidak mengambil buku tabungan dalam jangka waktu yang lama atau tidak bisa mengambil buku
-			tabungan dikarenakan slip hilang, apa yang terjadi dengan KTM kita?
-	A	:	KTM masih dapat dipakai untuk kegiatan akademik, namun untuk transaksi ke bank, harus lapor dulu ke bank yang
-			bersangkutan.
-
-4. 	Q	:	Dimana saya dapat mengurus KTM ?
-	A	:	Di Bank yang mengeluarkan KTM itu.
-
-5. 	Q	:	Apabila KTM sudah jadi, dimana saya harus mengambilnya ?
-	A	:	Di Bank tempat anda membuat KTM.
-
-6. 	Q	:	Berapa lama proses pembuatan KTM ?
-	A	:	1 Minggu.
-</pre>
+<ol>
+	<li>Q : Syarat-syarat apa saja yang diperlukan untuk membuat Kartu Tanda Mahasiswa (KTM) UDINUS?</li>A : Sudah mempunyai rekening di Bank Jateng, membawa pas foto 3x4.Q : Jika saya kehilangan KTM, apa yang harus saya lakukan?<br><br><li>Q : Apabila kita lupa tidak mengambil buku tabungan dalam jangka waktu yang lama atau tidak bisa mengambil buku tabungan dikarenakan slip hilang, apa yang terjadi dengan KTM kita?</li>A : KTM masih dapat dipakai untuk kegiatan akademik, namun untuk transaksi ke bank, harus lapor dulu ke bank yang bersangkutan.<br><br><li>Q : Dimana saya dapat mengurus KTM?</li>A : Di Bank yang mengeluarkan KTM itu.<br><br><li>Q : Apabila KTM sudah jadi, dimana saya harus mengambilnya?</li>A : Di Bank tempat anda membuat KTM.<br><br><li>Q	: Berapa lama proses pembuatan KTM?</li>A : 1 Minggu.
+</ol>	
