--- a/src/app/akademik/permohonan-cuti/permohonan-cuti.component.html
+++ b/src/app/akademik/permohonan-cuti/permohonan-cuti.component.html
@@ -1,4 +1,3 @@
-<p>
-1. 	Q	:	Kemana saya bisa mengajukan permohonan cuti akademik?
-	A	:	ke Biro Akademik (Biak).
-</p>
+<ol>
+	<li>Q : Kemana saya bisa mengajukan permohonan cuti akademik?</li>A	: ke Biro Akademik (Biak).
+</ol>
