--- a/src/app/akademik/transkrip/transkrip.component.html
+++ b/src/app/akademik/transkrip/transkrip.component.html
@@ -1,16 +1,3 @@
-<pre>
-1. 	Q	:	Dimana Mahasiswa dapat melihat transkrip?
-	A	:	Di SiAdin atau di TU.
-
-2. 	Q	:	Bagaimana Cara mengambil transkrip?
-	A	:	meminta surat permohonan ambil transkrip di TU, dan menyerahkan fotocopy ATM.
-
-3. 	Q	:	Dimana Saya dapat mengambil transkrip?
-	A	:	Di TU Fakultas.
-
-4. 	Q	:	Apabila nilai mata kuliah Saya dari Dosen B akan tetapi di dalam transkrip tertulis C, mengapa bisa begitu?
-	A	:	Menghubungi Dosen yang bersangkutan.
-
-5. 	Q	:	Bagaimana mekanisme menghapus nilai / mata kuliah pada transkrip?
-	A	:	Hubungi kepala program studi untuk melakukan konsultasi terlebih dahulu.
-</pre>
+<ol>
+	<li>Q : Dimana Mahasiswa dapat melihat transkrip?</li>A	: Di SiAdin atau di TU.<br><br><li>Q : Bagaimana Cara mengambil transkrip?</li>A : Meminta surat permohonan ambil transkrip di TU, dan menyerahkan fotocopy ATM.<br><br><li>Q : Dimana Saya dapat mengambil transkrip?</li>A : Di TU Fakultas.<br><br><li>Q	: Apabila nilai mata kuliah Saya dari Dosen B akan tetapi di dalam transkrip tertulis C, mengapa bisa begitu?</li>A	: Menghubungi Dosen yang bersangkutan.<br><br><li>Q : Bagaimana mekanisme menghapus nilai / mata kuliah pada transkrip?</li>A : Hubungi kepala program studi untuk melakukan konsultasi terlebih dahulu.
+</ol>
