--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,1 @@
-<p>
-  home works!
-</p>
+<blockquote><b>FAQ (Frequently Asked Question</b> adalah bentuk menu yang biasa kita jumpai pada berbagai macam site. FAQ berisi kumpulan pertanyaan yang sering ditanyakan oleh user mengenai site yang mereka kunjungi. Kumpulan pertanyaan yang diajukan oleh user kemudian akan dijawab oleh si admin setelah itu akan ditampilkan dalam menu FAQ yang ada. FAQ di sini adalah kumpulan pertanyaan yang sering diajukan mahasiswa kepada pihak akademik, baik itu mengenai sistem yang ada maupun prosedur-prosedur dari akademik.</blockquote>
