--- a/src/app/kemahasiswaan/organisasi-atau-himpunan-mahasiswa/organisasi-atau-himpunan-mahasiswa.component.html
+++ b/src/app/kemahasiswaan/organisasi-atau-himpunan-mahasiswa/organisasi-atau-himpunan-mahasiswa.component.html
@@ -1,14 +1,3 @@
-<pre>
-1. 	Q	:	Ada berapa Himpunan/organisasi di Udinus?
-	A	:	- BEM (Badan Eksekutif Mahasiswa) tingkat Fak. ada 5
-			- BEM U ( Badan Eksekutif Mahasiswa Universitas) ada 1 
-			- MPM ( Majelis Permusyawaratan Mahasiswa ) ada 1 
-			- DPM (Dewan Perwakilan Mahasiswa) Tingkat Fak. ada 5 
-			- DPM U ( Dewan Perwakilan Mahasiswa Universitas ) ada 1 
-			- Untuk Himpunan terdapat di setiap jurusan yang ada di bawah Fakultas
-
-2. 	Q	:	Apa Manfaat masuk ke organisasi/himpunan?
-	A	:	- mendapat pengalaman tentang kerja tim
-			- pengalaman dibidang sosialisasi
-			- pengalaman dibidang lobbying dan masih banyak lagi
-</pre>
+<ol>
+	<li>Q : Ada berapa Himpunan/organisasi di Udinus?</li>A : BEM (Badan Eksekutif Mahasiswa) tingkat Fak. ada 5, BEM U ( Badan Eksekutif Mahasiswa Universitas) ada 1, MPM ( Majelis Permusyawaratan Mahasiswa ) ada 1, DPM (Dewan Perwakilan Mahasiswa) Tingkat Fak. ada 5, DPM U ( Dewan Perwakilan Mahasiswa Universitas ) ada 1, Untuk Himpunan terdapat di setiap jurusan yang ada di bawah Fakultas<br><br><li>Q : Apa Manfaat masuk ke organisasi/himpunan?</li>A : Mendapat pengalaman tentang kerja tim, Pengalaman dibidang sosialisasi, Pengalaman dibidang lobbying dan masih banyak lagi.
+</ol>	
