--- a/src/app/kemahasiswaan/penelitian-atau-karya-ilmiah/penelitian-atau-karya-ilmiah.component.html
+++ b/src/app/kemahasiswaan/penelitian-atau-karya-ilmiah/penelitian-atau-karya-ilmiah.component.html
@@ -1,18 +1,3 @@
-<pre>
-1. 	Q	:	Ada berapa macam kegiatan peneliitian/karya ilmiah yang dapat diikut oleh mahasiswa UDINUS?
-	A	:	- PKM (Program Kreatifitas Mahasiswa)
-			- Program Fasilitasi PemProP Jateng
-			- Karya Ilmiah di Gemastik
-
-2. 	Q	:	Apa itu PKM?
-	A	:	PKM adalah Program Kreatifitas Mahasiswa yang di selenggarakan oleh DIKTI. PKM ini terdiri dari 7 jenis yang
-			dapat diikuti, yaitu : PKM-K (Program Kreatifitas Mahasiswa bagian Kewirausahaan), PKM-M (Program Kreatifitas Mahasiswa bagian Pengabdian Masyarakat), PKM-P (Program Kreatifitas Mahasiswa bagian Penelitian), PKM-T (Program Kreatifitas Mahasiswa bagian Teknologi), PKM-KC(Program Kreatifitas Mahasiswa bagian Karsa Cipta), PKM-AI (Program Kreatifitas Mahasiswa bagian Artikel Ilmiah), PKM-GT (Program Kreatifitas Mahasiswa bagian Gagasan Tertulis).
-
-3. 	Q	:	Apa itu Program Fasilitasi Pemprop Jateng?
-	A	:	Sebuah Program penelitian/ karyatulis Ilmiah yang dapat diikuti oleh mahasiswa se Jateng. Penyelenggara Program
-			Fasilitasi ini adalah Pemprop Jateng, Dinas Pendidikan Kota Semarang. Ada beberapa Bidang yang dapat diikuti : RBTM(Rancang Bangun Teknologi), Kewirausahaan.
-
-4. 	Q	:	Dimana kita bisa mendapatkan informasi tentang penelitian/ karya Ilmiah?
-	A	:	- Papan Pengumuman
-			- Dapat dilihat di Facebook Bima (https://www.facebook.com/bimadinus?fref=ts)
-</pre>
+<ol>
+	<li>Q : Ada berapa macam kegiatan peneliitian/karya ilmiah yang dapat diikut oleh mahasiswa UDINUS?</li>A : PKM (Program Kreatifitas Mahasiswa), Program Fasilitasi PemProv Jateng, Karya Ilmiah di Gemastik<br><br><li>Q : Apa itu PKM?</li>A : PKM adalah Program Kreatifitas Mahasiswa yang di selenggarakan oleh DIKTI. PKM ini terdiri dari 7 jenis yang dapat diikuti, yaitu : PKM-K (Program Kreatifitas Mahasiswa bagian Kewirausahaan), PKM-M (Program Kreatifitas Mahasiswa bagian Pengabdian Masyarakat), PKM-P (Program Kreatifitas Mahasiswa bagian Penelitian), PKM-T (Program Kreatifitas Mahasiswa bagian Teknologi), PKM-KC(Program Kreatifitas Mahasiswa bagian Karsa Cipta), PKM-AI (Program Kreatifitas Mahasiswa bagian Artikel Ilmiah), PKM-GT (Program Kreatifitas Mahasiswa bagian Gagasan Tertulis).<br><br><li> Q	: Apa itu Program Fasilitasi Pemprop Jateng?</li>A : Sebuah Program penelitian/ karyatulis Ilmiah yang dapat diikuti oleh mahasiswa se Jateng. Penyelenggara Program Fasilitasi ini adalah Pemprop Jateng, Dinas Pendidikan Kota Semarang. Ada beberapa Bidang yang dapat diikuti : RBTM(Rancang Bangun Teknologi), Kewirausahaan.<br><br><li>Q	: Dimana kita bisa mendapatkan informasi tentang penelitian/ karya Ilmiah?</li>A : Papan Pengumuman, Dapat dilihat di Facebook Bima (https://www.facebook.com/bimadinus?fref=ts).
+</ol>	
