--- a/src/app/kemahasiswaan/unit-kegiatan-mahasiswa/unit-kegiatan-mahasiswa.component.html
+++ b/src/app/kemahasiswaan/unit-kegiatan-mahasiswa/unit-kegiatan-mahasiswa.component.html
@@ -1,9 +1,3 @@
-<pre>
-1. 	Q	:	Ada berapa Unit Kegiatan Mahasiswa di UDINUS?
-	A	:	ada 18 UKM, yaitu : Dncc, Aldaka, Pkkmk, Pers Kampus, Pramuka, Bulu Tangkis, PMK, Teater, Musik, Menwa, Psm,
-			Bai, Sepak Bola, Tae Kwon Do, Basket, Ksr, Penalaran, Karate.
-
-2. 	Q	:	Bagaimana cara untuk masuk ke Unit kegiatan Mahasiswa?
-	A	:	Bisa langsung menghubungi pihak UKM yang diinginkan. Karena setiap UKM akan membuka pendaftaran untuk mahasiswa
-			yang ingin bergabung.
-</pre>
+<ol>
+	<li>Q : Ada berapa Unit Kegiatan Mahasiswa di UDINUS?</li>A	:	ada 18 UKM, yaitu : Dncc, Aldaka, Pkkmk, Pers Kampus, Pramuka, Bulu Tangkis, PMK, Teater, Musik, Menwa, Psm, Bai, Sepak Bola, Tae Kwon Do, Basket, Ksr, Penalaran, Karate.<br><br><li>Q	: Bagaimana cara untuk masuk ke Unit kegiatan Mahasiswa?</li>A : Bisa langsung menghubungi pihak UKM yang diinginkan. Karena setiap UKM akan membuka pendaftaran untuk mahasiswa yang ingin bergabung.
+</ol>	
