--- a/src/app/kepegawaian/beban-kinerja-dosen/beban-kinerja-dosen.component.html
+++ b/src/app/kepegawaian/beban-kinerja-dosen/beban-kinerja-dosen.component.html
@@ -1,15 +1,3 @@
-<pre>
-1. 	Q	:	Apa yang dimaksud dengan beban kinerja dosen (BKD)?
-	A	:	Beban kinerja dosen adalah beban kerja yang diberikan kepada masing – masing dosen berupa jumlah sks untuk
-			mengajar.
-
-2. 	Q	:	Kapan beban kinerja dosen (BKD) digunakan?
-	A	:	
-
-3. 	Q	:	Apa saja yang tertuang di Beban Kinerja Dosen (BKD)?
-	A	:	Setiap semester BKD diproses, adapun isinya adalah Beban mengajar (SKS masing masing matakuliah, SK mengajar)
-			Jumlah Penelitian Jumlah Pengabdian Kegiatasn Keprofesoran (bagi yang profesor).
-
-4. 	Q	:	Siapa saja yang mengesahkan Beban Kinerja Dosen dari masing masing dosen?
-	A	:	Rektor dan Ka.Prodi.
-</pre>
+<ol>
+	<li>Q : Apa yang dimaksud dengan beban kinerja dosen (BKD)?</li>A : Beban kinerja dosen adalah beban kerja yang diberikan kepada masing – masing dosen berupa jumlah sks untuk mengajar.<br><br><li>Q : Kapan beban kinerja dosen (BKD) digunakan?</li>A : <br><br><li>Q : Apa saja yang tertuang di Beban Kinerja Dosen (BKD)?</li>A : Setiap semester BKD diproses, adapun isinya adalah Beban mengajar (SKS masing masing matakuliah, SK mengajar) Jumlah Penelitian Jumlah Pengabdian Kegiatasn Keprofesoran (bagi yang profesor).<br><br><li>Q : Siapa saja yang mengesahkan Beban Kinerja Dosen dari masing masing dosen?</li>A : Rektor dan Ka.Prodi.
+</ol>
