--- a/src/app/kepegawaian/informasi-dosen/informasi-dosen.component.html
+++ b/src/app/kepegawaian/informasi-dosen/informasi-dosen.component.html
@@ -1,5 +1,3 @@
-<pre>
-1. 	Q	:	Dimana kita dapat mengakses informasi tentang Dosen di Udinus?
-	A	:	Informasi Dosen dapat diakses melalui website masing – masing fakultas pada menu Staff Dosen atau dengan Search
-			people pada hompage Udinus.
-</pre>
+<ol>
+	<li>Q : Dimana kita dapat mengakses informasi tentang Dosen di Udinus?</li>A : Informasi Dosen dapat diakses melalui website masing – masing fakultas pada menu Staff Dosen atau dengan Search people pada hompage Udinus.
+</ol>
