--- a/src/app/layanan-poliklinik/layanan-poliklinik/layanan-poliklinik.component.html
+++ b/src/app/layanan-poliklinik/layanan-poliklinik/layanan-poliklinik.component.html
@@ -1,10 +1,3 @@
-<pre>
-1. 	Q	:	Jika saya pergi berobat ke poliklinik Udinus, perlukah saya membayar untuk pelayanan & obatnya?
-	A	:	Tidak, cukup membawa KTM saja.
-
-2. 	Q	:	Ada berapa jenis poli yang ada di poliklinik Udinus?
-	A	:	Poli Umum dan Poli Gigi serta Poli Psikologi.
-
-3. 	Q	:	Sebagai mahasiswa, Syarat apa yang wajib dijadikan standar pelayanan di Poliklinik Udinus?
-	A	:	Harus berstatus Aktif dan membawa KTM pada saat berkunjung ke Poliklinik.
-</pre>
+<ol>
+	<li>Q : Jika saya pergi berobat ke poliklinik Udinus, perlukah saya membayar untuk pelayanan & obatnya?</li>A : Tidak, cukup membawa KTM saja.<br><br><li>Q	: Ada berapa jenis poli yang ada di poliklinik Udinus?</li>A : Poli Umum dan Poli Gigi serta Poli Psikologi.<br><br><li>Q : Sebagai mahasiswa, Syarat apa yang wajib dijadikan standar pelayanan di Poliklinik Udinus?</li>A : Harus berstatus Aktif dan membawa KTM pada saat berkunjung ke Poliklinik.
+</ol>
