--- a/src/app/parkir/keluar-masuk/keluar-masuk.component.html
+++ b/src/app/parkir/keluar-masuk/keluar-masuk.component.html
@@ -1,8 +1,3 @@
-<pre>
-1. 	Q	:	Bagaimana jika pada saat keluar parkir tidak dapat menunjukkan STNK?
-	A	:	Anda harus mengisikan data diri dan kendaraan pada pos parkir dan meninggalkan KTM/KTP kemudian meminta tanda
-			tangan satpam.
-
-2. 	Q	:	Bagaimana cara mengambil kembali KTP/KTM yang ditahan saat tidak membawa STNK?
-	A	:	KTP/KTM dapat diambil dengan menunjukan STNK dari kendaraan tersebut.
-</pre>
+<ol>
+	<li>Q : Bagaimana jika pada saat keluar parkir tidak dapat menunjukkan STNK?</li>A : Anda harus mengisikan data diri dan kendaraan pada pos parkir dan meninggalkan KTM/KTP kemudian meminta tanda tangan satpam.<br><br><li>Q : Bagaimana cara mengambil kembali KTP/KTM yang ditahan saat tidak membawa STNK?</li>A : KTP/KTM dapat diambil dengan menunjukan STNK dari kendaraan tersebut.
+</ol>	
