--- a/src/app/perpustakaan/buku-text/buku-text.component.html
+++ b/src/app/perpustakaan/buku-text/buku-text.component.html
@@ -1,10 +1,3 @@
-<pre>
-1. 	Q	:	Berapa jumlah maksimal buku yang bisa di pinjam di perpustakaan Udinus?
-	A	:	Maksimal satu buku.
-
-2. 	Q	:	Bagaimana jika buku yang saya pinjam, hilang?
-	A	:	Maka Anda harus mengganti dengan buku yang sama atau mengganti dengan sejumlah denda yang ada.
-
-3. 	Q	:	Dimana saya bisa melihat hasil skripsi mahasiswa Udinus?
-	A	:	di perpustakaan Udinus.
-</pre>
+<ol>
+	<li>Q : Berapa jumlah maksimal buku yang bisa di pinjam di perpustakaan Udinus?</li>A : Maksimal satu buku.<br><br><li>Q : Bagaimana jika buku yang saya pinjam, hilang?</li>A : Maka Anda harus mengganti dengan buku yang sama atau mengganti dengan sejumlah denda yang ada.<br><br><li>Q : Dimana saya bisa melihat hasil skripsi mahasiswa Udinus?</li>A : Di perpustakaan Udinus.
+</ol>
