--- a/src/app/perpustakaan/prosedur-pengembalian/prosedur-pengembalian.component.html
+++ b/src/app/perpustakaan/prosedur-pengembalian/prosedur-pengembalian.component.html
@@ -1,4 +1,3 @@
-<p>
-1. 	Q	:	Bagaimana proses pengenbalian buku di perpustakaan?
-	A	:	Menyerahkan buku dan kartu anggota kepada petugas untuk menghapus data peminjaman di sistem.
-</p>
+<ol>
+	<li>Q : Bagaimana proses pengenbalian buku di perpustakaan?</li>A :Menyerahkan buku dan kartu anggota kepada petugas untuk menghapus data peminjaman di sistem.
+</ol>
