--- a/src/app/semester-pendek/absensi/absensi.component.html
+++ b/src/app/semester-pendek/absensi/absensi.component.html
@@ -1,7 +1,3 @@
-<pre>
-1. 	Q	:	Bagaimana proses Absensi pada perkuliahan semester pendek?
-	A	:	Absensi dilakukan secara manual yakni dengan menandatangani daftar hadir saat perkuliahan berlangsung.
-
-2. 	Q	:	Apa yang harus kita lakukan jika data absensi di SiAdin tidak sesuai?
-	A	:	Hubungi TU Fakultas.
-</pre>
+<ol>
+	<li>Q : Bagaimana proses Absensi pada perkuliahan semester pendek?</li>A : Absensi dilakukan secara manual yakni dengan menandatangani daftar hadir saat perkuliahan berlangsung.<br><br><li>Q : Apa yang harus kita lakukan jika data absensi di SiAdin tidak sesuai?</li>A : Hubungi TU Fakultas.
+</ol>	
