--- a/src/app/wisuda/syarat-pendaftaran-wisuda/syarat-pendaftaran-wisuda.component.html
+++ b/src/app/wisuda/syarat-pendaftaran-wisuda/syarat-pendaftaran-wisuda.component.html
@@ -1,11 +1,3 @@
-<pre>
-1. 	Q	:	Apa saja persyaratan pendaftaran wisuda ?
-	A	:	- pastikan anda sudah masuk data yudisium
-			- membayar pendaftaran wisuda
-			- mendaftar di web dinus.ac.id/wisuda
-			- mengukur toga di BIAK 5.verifikasi pendaftaran wisuda(membawa print out formulir wisuda, fc. ijazah legalisir, bukti TA, slip pembayaran wisuda)
-
-2. 	Q	:	apakah stopmap yang digunakan untuk pengumpulan berkas wisuda itu sama?
-	A	:	beda, Stopmap Biru : FIK dan Pasca Sarjana Stopmap Kuning : Ekonomi Stopmap Hijau : Kesehatan Stopmap Merah :
-			Fakultas Ilmu Budaya dan Fakultas Teknik
-</pre>
+<ol>
+	<li>Q : Apa saja persyaratan pendaftaran wisuda?</li>A : Pastikan anda sudah masuk data yudisium, membayar pendaftaran wisuda, mendaftar di web dinus.ac.id/wisuda, mengukur toga di BIAK 5.verifikasi pendaftaran wisuda(membawa print out formulir wisuda, fc. ijazah legalisir, bukti TA, slip pembayaran wisuda).<br><br><li>Q : Apakah stopmap yang digunakan untuk pengumpulan berkas wisuda itu sama?</li>A : Beda, Stopmap Biru : FIK dan Pasca Sarjana Stopmap Kuning : Ekonomi Stopmap Hijau : Kesehatan Stopmap Merah : Fakultas Ilmu Budaya dan Fakultas Teknik.
+</ol>
