--- a/src/app/wisuda/tanggal-pelaksanaan/tanggal-pelaksanaan.component.html
+++ b/src/app/wisuda/tanggal-pelaksanaan/tanggal-pelaksanaan.component.html
@@ -1,4 +1,3 @@
-<pre>
-1. 	Q	:	Kapan pendaftaran wisuda di buka?
-	A	:	Lihat di web wisuda http://dinus.ac.id/wisuda
-</pre>
+<ol>
+	<li>Q : Kapan pendaftaran wisuda di buka?</li>A : Lihat di web wisuda http://dinus.ac.id/wisuda
+</ol>
