--- a/src/app/akademik/regristrasi/regristrasi.component.html
+++ b/src/app/akademik/regristrasi/regristrasi.component.html
@@ -1,20 +1,3 @@
-<pre>
-1. 	Q	:	Apa langkah awal untuk melakukan registrasi?
-	A	:	melakukan pendaftaran dan menyelesaikan administrasi keuangan.
-
-2. 	Q	:	Kapan registrasi dilakukan?
-	A	:	sesuai dengan jadwal gelombang pendaftaran yang sedang berlaku
-
-3. 	Q	:	Di Bank mana saya dapat membayar?
-	A	:	Bank JATENG Cabang pembantu UDINUS Gedung G lantai 1.
-
-4. 	Q	:	Apa yang harus saya cantumkan saat melakukan pembayaran pendaftaran mahasiswa baru?
-	A	:	Anda tidak perlu mencantumkan apapun, hanya perlu melakukan pendaftaran melalui sistem kami yang akan di pandu
-			oleh petugas pendaftaran mahasiswa baru.
-
-5. 	Q	:	Setelah membayar di Bank apa yang harus saya lakukan?
-	A	:	Registrasi.
-
-6. 	Q	:	Jika saya masih kesulitan dengan registrasi, apa yang harus saya lakukan?
-	A	:	hubungi petugas registrasi.
-</pre>
+<ol>
+	<li>Q : Apa langkah awal untuk melakukan registrasi?</li>A : Melakukan pendaftaran dan menyelesaikan administrasi keuangan.<br><br><li>Q : Kapan registrasi dilakukan?</li>A : Sesuai dengan jadwal gelombang pendaftaran yang sedang berlaku.<br><br><li>Q	: Di Bank mana saya dapat membayar?</li>A : Bank JATENG Cabang pembantu UDINUS Gedung G lantai 1.<br><br><li>Q : Apa yang harus saya cantumkan saat melakukan pembayaran pendaftaran mahasiswa baru?</li>A : Anda tidak perlu mencantumkan apapun, hanya perlu melakukan pendaftaran melalui sistem kami yang akan di pandu oleh petugas pendaftaran mahasiswa baru.<br><br><li> Q	: Setelah membayar di Bank apa yang harus saya lakukan?</li>A : Registrasi.<br><br><li>Q : Jika saya masih kesulitan dengan registrasi, apa yang harus saya lakukan?</li>A : Hubungi petugas registrasi.
+</ol>
