--- a/src/app/akademik/wisuda/wisuda.component.html
+++ b/src/app/akademik/wisuda/wisuda.component.html
@@ -1,5 +1,3 @@
-<pre>
-1. 	Q	:	Dimana Saya dapat memperoleh informasi dan mendaftar wisuda?
-	A	:	www.dinus.ac.id/wisuda.
-
-</pre>
+<ol>
+	<li>Q : Dimana Saya dapat memperoleh informasi dan mendaftar wisuda?</li>A : www.dinus.ac.id/wisud
+</ol>	
