--- a/src/app/career-center/info-lowongan/info-lowongan.component.html
+++ b/src/app/career-center/info-lowongan/info-lowongan.component.html
@@ -1,4 +1,3 @@
-<pre>
-1. 	Q	:	dimana saya bisa mendapatkan informasi lowongan pekerjaan?
-	A	:	dapat membuka di website cc.dinus.ac.id
-</pre>
+<ol>
+	<li>Q : Dimana saya bisa mendapatkan informasi lowongan pekerjaan?</li>A : Dapat membuka di website cc.dinus.ac.id
+</ol>
