--- a/src/app/hospitality/sms-center/sms-center.component.html
+++ b/src/app/hospitality/sms-center/sms-center.component.html
@@ -1,10 +1,3 @@
-<pre>
-1. 	Q	:	apakah orangtua mahasiswa juga bisa mengakses SMS Senter?
-	A	:	bisa, di nomor 081325634567.
-
-2. 	Q	:	jika nomor yang digunakan mahasiswa untuk sms itu baru , apakah harus mendaftarkan kembali?
-	A	:	tidak.
-
-3. 	Q	:	apa manfaat SMS Senter untuk mahasiswa?
-	A	:	bisa menyampaikan keluhan, syarat dan kritik.
-</pre>
+<ol>
+	<li>Q : Apakah orangtua mahasiswa juga bisa mengakses SMS Senter?</li>A : Bisa, di nomor 081325634567.<br><br><li>Q : Jika nomor yang digunakan mahasiswa untuk sms itu baru , Apakah harus mendaftarkan kembali?</li>A	: Tidak.<br><br><li>Q : Apa manfaat SMS Senter untuk mahasiswa?</li>A : Bisa menyampaikan keluhan, syarat dan kritik.
+</ol>	
