--- a/src/app/kemahasiswaan/beasiswa/beasiswa.component.html
+++ b/src/app/kemahasiswaan/beasiswa/beasiswa.component.html
@@ -1,30 +1,3 @@
-<pre>
-1. 	Q	:	Dimana kita bisa mendapatkan informasi tentang beasiswa?
-	A	:	- Informasi mengenai beasiswa bisa dilihat di http://bima.dinus.ac.id
-			- di papan pengumuman
-			- di Siadin Mahasiswa
-
-2. 	Q	:	apa saja persyaratan untuk mendapatkan beasiswa prestasi?
-	A	:	- Sertifikat kejuaraan (tingkat lokal,nasional,internasional) 
-			- Surat rekomendasi dari fakultas
-
-3. 	Q	:	Jenis-jenis beasiswa yang dikelola Udinus?
-	A	:	-Beasiswa PPA 
-			-Beasiswa BBM 
-			-Beasiswa Aktivis 
-			-Beasiswa BKM 
-			-Beasiswa PemproP 
-			-Beasiswa Djarum 
-			-Beasiswa TPSDP 
-			-Beasiswa Supersemar 
-			-Beasiswa Dinar 
-			-Beasiswa Instusi Per Program Studi 
-			-Beasiswa Ungulan 
-			-Beasiswa Khusus 
-			-Beasiswa Prestasi 
-			-Beasiswa BRI
-
-4. 	Q	:	Apa syarat Utama mendaftar beasiswa?
-	A	:	- FC.Kartu Mahasiswa (KTM)Yang Masih Berlaku 
-			- Nilai IPK minimal 2,75 dibuktikan dengan Transkip nilai yang dikeluarkan oleh Tata Usaha dari fakultas
-</pre>
+<ol>
+	<li>Q : Dimana kita bisa mendapatkan informasi tentang beasiswa?</li>A : Informasi mengenai beasiswa bisa dilihat di http://bima.dinus.ac.id, Di papan pengumuman, Di Siadin Mahasiswa<br><br><li>Q : Apa saja persyaratan untuk mendapatkan beasiswa prestasi?</li>A : Sertifikat kejuaraan (tingkat lokal,nasional,internasional), Surat rekomendasi dari fakultas.<br><br><li>Q : Jenis-jenis beasiswa yang dikelola UDINUS?</li>A : Beasiswa PPA, Beasiswa BBM, Beasiswa Aktivis, Beasiswa BKM, Beasiswa Pemprov, Beasiswa Djarum, Beasiswa TPSDP, Beasiswa Supersemar, Beasiswa Dinar, Beasiswa Instusi Per Program Studi, Beasiswa Ungulan, Beasiswa Khusus, Beasiswa Prestasi, Beasiswa BRI.<br><br><li>Q : Apa syarat Utama mendaftar beasiswa?</li>A : FC.Kartu Mahasiswa (KTM)Yang masih berlaku, Nilai IPK minimal 2,75 dibuktikan dengan Transkip nilai yang dikeluarkan oleh Tata Usaha dari Fakultas.
+</ol>
