--- a/src/app/kemahasiswaan/komunitas/komunitas.component.html
+++ b/src/app/kemahasiswaan/komunitas/komunitas.component.html
@@ -1,4 +1,3 @@
-<pre>
-1. 	Q	:	Komunitas apa saja yang ada di Udinus?
-	A	:	Komunitas yang ada di Udinus antara lain : Doscom, Panser Udinus, berbagai UKM serta Himpunan Mahasiswa, dll.
-</pre>
+<ol>
+	<li>Q : Komunitas apa saja yang ada di UDINUS?</li>A : Komunitas yang ada di Udinus antara lain : Doscom, Panser Udinus, berbagai UKM serta Himpunan Mahasiswa, dll.
+</ol>	
