--- a/src/app/keuangan/rekening-pembayaran/rekening-pembayaran.component.html
+++ b/src/app/keuangan/rekening-pembayaran/rekening-pembayaran.component.html
@@ -1,7 +1,3 @@
-<pre>
-1. 	Q	:	Ke nomor rekening mana saja pembayaran kuliah dapat dilakukan?
-	A	:	- Bank Jateng Cab. Udinus Semarang a/n Universitas Dian Nuswantoro No Rek: 1.099.00001.3 
-			- Bank Mandiri Cab.Candi Baru Semarang a/n Universitas Dian Nuswantoro No. Rek: 136.000.5359.200 
-			- Bank BCA Cab. Pemuda a/n Universitas Dian Nuswantoro No. Rek : 099.382056.5 
-			- Bank BRI Cab. Pandaran a/n Universitas Dian Nuswantoro No. Rek : 0325.01.00 1102.30.6 
-</pre>
+<ol>
+	<li>Q : Ke nomor rekening mana saja pembayaran kuliah dapat dilakukan?</li>A : Bank Jateng Cab. Udinus Semarang a/n Universitas Dian Nuswantoro No Rek: 1.099.00001.3, Bank Mandiri Cab.Candi Baru Semarang a/n Universitas Dian Nuswantoro No. Rek: 136.000.5359.200, Bank BCA Cab. Pemuda a/n Universitas Dian Nuswantoro No. Rek : 099.382056.5, Bank BRI Cab. Pandaran a/n Universitas Dian Nuswantoro No. Rek : 0325.01.00 1102.30.6
+</ol>	
