--- a/src/app/keuangan/status-pembayaran/status-pembayaran.component.html
+++ b/src/app/keuangan/status-pembayaran/status-pembayaran.component.html
@@ -1,16 +1,3 @@
-<pre>
-1. 	Q	:	Dimana saya bisa melihat status pembayaran?
-	A	:	Di Siadin Mahasiswa.
-
-2. 	Q	:	apakah ada keringanan biaya uang gedung untuk jalur PMDK?
-	A	:	ada, sebesar 25%.
-
-3. 	Q	:	apa syarat untuk membayar wisuda?
-	A	:	sudah masuk di data yudisium.
-
-4. 	Q	:	bagaimana jika mahasiswa sudah membayar uang SPP, tetapi di dalam data tidak terdaftar?
-	A	:	Konfirmasi ke BIRO Keuangan.
-
-5. 	Q	:	bagaimana jika mahasiswa ingin mengetahui informasi pembayaran uang gedung?
-	A	:	Menghubungi biro keuangan, atau akses admisi dinus.ac.id/pmbonline
-</pre>
+<ol>
+	<li>Q : Dimana saya bisa melihat status pembayaran?</li>A : Di Siadin Mahasiswa.<br><br><li>Q : Apakah ada keringanan biaya uang gedung untuk jalur PMDK?</li>A : Ada, sebesar 25%.<br><br><li>Q : Apa syarat untuk membayar wisuda?</li>A : Sudah masuk di data yudisium.<br><br><li>Q	: Bagaimana jika mahasiswa sudah membayar uang SPP, tetapi di dalam data tidak terdaftar?</li>A	: Konfirmasi ke BIRO Keuangan.<br><br><li>Q	: Bagaimana jika mahasiswa ingin mengetahui informasi pembayaran uang gedung?</li>A	: Menghubungi biro keuangan, atau akses admisi dinus.ac.id/pmbonline
+</ol>
