--- a/src/app/parkir/tempat-parkir/tempat-parkir.component.html
+++ b/src/app/parkir/tempat-parkir/tempat-parkir.component.html
@@ -1,5 +1,3 @@
-<pre>
-1. 	Q	:	Dimana parkir mobil udinus?
-	A	:	Untuk semantara ini, area parkir adalah di - Depan gedung B (untuk kendaraan dosen dan staff) - Depan gedung E
-			(untuk mobil dan karyawan TVku) dan sebagian untuk kendaraan mahasiswa - Depan gedung G (untuk mobil) - Belakang gedung G (untuk motor) - Depa
-</pre>
+<ol>
+	<li>Q : Dimana parkir mobil udinus?</li>A : Untuk semantara ini, area parkir adalah di Depan gedung B (untuk kendaraan dosen dan staff), Depan gedung E (untuk mobil dan karyawan TVku) dan sebagian untuk kendaraan mahasiswa, Depan gedung G (untuk mobil), Belakang gedung G (untuk motor), Depa
+</ol>
