--- a/src/app/semester-reguler/proses-krs/proses-krs.component.html
+++ b/src/app/semester-reguler/proses-krs/proses-krs.component.html
@@ -1,22 +1,3 @@
-<pre>
-1. 	Q	:	Apa itu KRS?
-	A	:	KRS merupakan kepanjangan dari Kartu Rencana Studi yang berisi kewajiban kuliah yang harus diikuti mahasiswa.
-
-2. 	Q	:	Kapan input KRS di mulai?
-	A	:	Sebelum perkuliahan dimulai. Jadwal tepatnya akan diinformasikan sebelumnya melalui SiAdin dan papan pengumuman.
-
-3. 	Q	:	Pengambilan total SKS yang bisa diambil per semester berdasarkan apa?
-	A	:	Indeks Prestasi Semester (IPS).
-
-4. 	Q	:	Penyebab kenapa tidak bisa input KRS?
-	A	:	Belum menyelesaikan administrasi keuangan, atau masalah teknis seperti koneksi yang kurang baik.
-
-5. 	Q	:	Bagaimana jika kita kehabisan kelas pada waktu input KRS dan dimana kita harus bertanya?
-	A	:	Ruang Data pada TU Fakultas.
-
-6. 	Q	:	Apa saja syarat untuk bisa melakukan input KRS?
-	A	:	Menyelesaikan administrasi keuangan dan melakukan herregistrasi.
-
-7. 	Q	:	Dimana saya bisa melihat nama dosen wali saya?
-	A	:	Di siadin mahasiswa.
-</pre>
+<ol>
+	<li>Q : Apa itu KRS?</li>A : KRS merupakan kepanjangan dari Kartu Rencana Studi yang berisi kewajiban kuliah yang harus diikuti mahasiswa.<br><br><li>Q	: Kapan input KRS di mulai?</li>A : Sebelum perkuliahan dimulai. Jadwal tepatnya akan diinformasikan sebelumnya melalui SiAdin dan papan pengumuman.<br><br><li>Q : Pengambilan total SKS yang bisa diambil per semester berdasarkan apa?</li>A : Indeks Prestasi Semester (IPS).<br><br><li>Q : Penyebab kenapa tidak bisa input KRS?</li>A	: Belum menyelesaikan administrasi keuangan, atau masalah teknis seperti koneksi yang kurang baik.<br><br><li>Q : Bagaimana jika kita kehabisan kelas pada waktu input KRS dan dimana kita harus bertanya?</li>A : Ruang Data pada TU Fakultas.<br><br><li>Q : Apa saja syarat untuk bisa melakukan input KRS?</li>A : Menyelesaikan administrasi keuangan dan melakukan herregistrasi.<br><br><li>Q : Dimana saya bisa melihat nama dosen wali saya?</li>A : Di siadin mahasiswa.
+</ol>	
