--- a/src/app/si-adin/layanan/layanan.component.html
+++ b/src/app/si-adin/layanan/layanan.component.html
@@ -1,31 +1,3 @@
-<pre>
-1. 	Q	:	Ada penawaran krs bentuk pdf?
-	A	:	Ada, di account Siadin masing-masing.
-
-2. 	Q	:	jika ipk saya di Siadin tidak sesuai , apa yang harus saya lakukan?
-	A	:	Jika IPK dan IPS tidak sesuai dengan hitungan, kemungkinan sedang dalam perbaikan sampai masa krs berlangsung.
-
-3. 	Q	:	Jika saya membayar lewat BCA, kemanakah saya mengirim bukti pembayarannya?
-	A	:	Jika melakukan pembayaran biaya kuliah selain lewat bank bpd jateng maka harus membawa bukti pembayaran ke biku
-			di gedung G lantai 1.
-
-4. 	Q	:	Sudah bayar tapi tagihan keuangan belum terbayar?
-	A	:	kemungkinan pembayaran anda belum di validasi oleh biku untukk mempercepat validasi silahkan membawa bukti
-			pembayaran ke biku untuk segera di onlinekan.
-
-5. 	Q	:	Jika remidi tetap bisa input sesuai jadwal per fakultas?
-	A	:	bisa, tapi nilai yang tercantum di sistem adlah nilai yang anda dpatkan sebelum remidi.
-
-6. 	Q	:	Apakah KHS itu adalah keharusan?
-	A	:	KHS adalah sebuah bukti cetak nilai hasil ujia nyang anda dapatkan.
-
-7. 	Q	:	Apa yang terjadi jika saya mengikuti simulasi KRS?
-	A	:	Simulasi KRS yang anda lakukan tidak beerpengaruh apapun terhadap KRS anda secaral riil, namun jadwal yang di
-			tawarkan sudah di tentukan tata usaha fakultas masing2.
-
-8. 	Q	:	Jika saya tidak mengikuti kegiatan input KRS pada jadwal yang sudah ditentukan apa yang harus saya lakukan?
-	A	:	anda dapat mengikuti kegiatan input krs di jadwal yang ditentukan untuk semua fakultas dan Progdi.
-
-9. 	Q	:	Jika saya tidak mengikuti kegiatan input KRS pada jadwal yang sudah ditentukan apa yang harus saya lakukan?
-	A	:	Ya, karena seetiap kali perpanjangan TA, harus menginput kembali walaupun semester lalu TA nya blm selesai.
-</pre>
+<ol>
+	<li>Q : Ada penawaran krs bentuk pdf?</li>A	: Ada, di account Siadin masing-masing.<br><br><li>Q : Jika ipk saya di Siadin tidak sesuai , apa yang harus saya lakukan?</li>A : Jika IPK dan IPS tidak sesuai dengan hitungan, kemungkinan sedang dalam perbaikan sampai masa krs berlangsung.<br><br><li>Q : Jika saya membayar lewat BCA, kemanakah saya mengirim bukti pembayarannya?</li>A : Jika melakukan pembayaran biaya kuliah selain lewat bank bpd jateng maka harus membawa bukti pembayaran ke biku di gedung G lantai 1.<br><br><li> Q	: Sudah bayar tapi tagihan keuangan belum terbayar?</li>A : Kemungkinan pembayaran anda belum di validasi oleh biku untukk mempercepat validasi silahkan membawa bukti pembayaran ke biku untuk segera di onlinekan.<br><br><li>Q : Jika remidi tetap bisa input sesuai jadwal per fakultas?</li>A : Bisa, tapi nilai yang tercantum di sistem adlah nilai yang anda dpatkan sebelum remidi.<br><br><li>Q : Apakah KHS itu adalah keharusan?</li>A : KHS adalah sebuah bukti cetak nilai hasil ujia nyang anda dapatkan.<br><br><li>Q : Apa yang terjadi jika saya mengikuti simulasi KRS?</li>A : Simulasi KRS yang anda lakukan tidak beerpengaruh apapun terhadap KRS anda secaral riil, namun jadwal yang di tawarkan sudah di tentukan tata usaha fakultas masing2.<br><br><li>Q : Jika saya tidak mengikuti kegiatan input KRS pada jadwal yang sudah ditentukan apa yang harus saya lakukan?</li>A : Anda dapat mengikuti kegiatan input krs di jadwal yang ditentukan untuk semua fakultas dan Progdi.<br><br><li>Q : Jika saya tidak mengikuti kegiatan input KRS pada jadwal yang sudah ditentukan apa yang harus saya lakukan?</li>A	: Ya, karena seetiap kali perpanjangan TA, harus menginput kembali walaupun semester lalu TA nya blm selesai.
+</ol>
