--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="col-xs-2 col-sm-2 col-md-2 blablabla">
   <ul class="nav nav-sidebar">
-    <li class="active list-group-item" style="background-color:#428bca;"><a routerLink="/">FAQ</a></li>
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#akademik">Akademik  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a routerLink="/">FAQ</a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#akademik">Akademik  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="akademik" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/akademik/aktifasi">Aktifasi</a></li>
@@ -17,21 +17,21 @@
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#alumni">Alumni <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#alumni">Alumni <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="alumni" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/alumni/tracing-alumni">Tracing Alumni</a></li>
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#career-center">Career Center<i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#career-center">Career Center<i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="career-center" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/career-center/info-lowongan" >Info Lowongan</a></li>
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#hospitality">Hospotality  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#hospitality">Hospotality  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="hospitality" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/hospitality/call-center">Call Center</a></li>
@@ -40,7 +40,7 @@
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#kemahasiswaan">Kemahasiswaan  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#kemahasiswaan">Kemahasiswaan  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="kemahasiswaan" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/kemahasiswaan/beasiswa">Beasiswa</a></li>
@@ -52,7 +52,7 @@
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#kepegawaian">Kepegawaian <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#kepegawaian">Kepegawaian <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="kepegawaian" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/kepegawaian/beban-kinerja-dosen">Beban Kinerja Dosen</a></li>
@@ -62,7 +62,7 @@
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#keuangan">Keuangan <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#keuangan">Keuangan <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="keuangan" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/keuangan/rekening-pembayaran">Rekening Pembayaran</a></li>
@@ -71,7 +71,7 @@
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#laboratorium">Laboratorium  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#laboratorium">Laboratorium  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="laboratorium" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/laboratorium/jenis-dan-kegiatan">Jenis dan Kategori</a></li>
@@ -79,14 +79,14 @@
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#layanan-poliklinik">Layanan Poliklinik  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#layanan-poliklinik">Layanan Poliklinik  <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="layanan-poliklinik" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="/layanan-poliklinik/layanan-poliklinik">Layanan Poliklinik</a></li>
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#parkir">Parkir <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#parkir">Parkir <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="parkir" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="parkir/kehilangan">Kehilangan</a></li>
@@ -95,7 +95,7 @@
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca; font-size:12px;"><a data-toggle="collapse" href="#penelitian-dan-pengabdian">Penelitian dan Pengabdian <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca; font-size:12px;padding: 0px 15px"><a data-toggle="collapse" href="#penelitian-dan-pengabdian">Penelitian dan Pengabdian <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="penelitian-dan-pengabdian" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="penelitian-dan-pengabdian/penelitian">Penelitian</a></li>
@@ -104,7 +104,7 @@
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca; font-size:12px;"><a data-toggle="collapse" href="#pengumuman-akademik">Pengumuman Akademik <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca; font-size:12px;padding: 0px 15px"><a data-toggle="collapse" href="#pengumuman-akademik">Pengumuman Akademik <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="pengumuman-akademik" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="pengumuman-akademik/berita">Berita</a></li>
@@ -112,7 +112,7 @@
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#percetakan">Percetakan <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#percetakan">Percetakan <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="percetakan" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="percetakan/lokasi-percetakan">Lokasi Percetakan</a></li>
@@ -120,7 +120,7 @@
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#perpustakaan">Perpustakaan <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#perpustakaan">Perpustakaan <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="perpustakaan" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="perpustakaan/buku-text">Buku Text</a></li>
@@ -133,7 +133,7 @@
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#semester-pendek">Semester Pendek <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#semester-pendek">Semester Pendek <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="semester-pendek" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="semester-pendek/absensi">Absensi</a></li>
@@ -144,7 +144,7 @@
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#semester-reguler">Semester Reguler <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#semester-reguler">Semester Reguler <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="semester-reguler" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="semester-reguler/absensi">Absensi</a></li>
@@ -154,7 +154,7 @@
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#siadin">SiAdin <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#siadin">SiAdin <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="siadin" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="si-adin/e-mail">E-mail</a></li>
@@ -164,7 +164,7 @@
       </ul>
     </div>
 
-    <li class="active list-group-item" style="background-color:#428bca;"><a data-toggle="collapse" href="#wisuda">Wisuda <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a data-toggle="collapse" href="#wisuda">Wisuda <i class="fa fa-caret-down"style="position:absolute; right:23px"></i> </a></li>
     <div id="wisuda" class="panel-collapse collapse out sublist">
       <ul>
         <li><a routerLink="wisuda/hal-hal-penting">Hal-hal penting</a></li>
@@ -173,6 +173,6 @@
         <li><a routerLink="wisuda/tanggal-pelaksanaan">Tanggal Pelaksanaan</a></li>
       </ul>
     </div>
-    <li class="active list-group-item" style="background-color:#428bca;"><a routerLink="/ask-a-question">Ask A Question ! </a></li>
+    <li class="active list-group-item" style="background-color:#428bca;padding: 0px 15px"><a routerLink="/ask-a-question">Ask A Question ! </a></li>
   </ul>
 </div>
